# kaggle_titanic

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/kaggle_titanic/: __init__.py  cli.py
tests/: __init__.py  test_kaggle_titanic.py
